WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
257512
Clipping a caret rect results in its size changing instead of actually clipping
https://bugs.webkit.org/show_bug.cgi?id=257512
Summary
Clipping a caret rect results in its size changing instead of actually clipping
Richard Robinson
Reported
2023-05-30 15:24:17 PDT
rdar://110012236
Attachments
Add attachment
proposed patch, testcase, etc.
Richard Robinson
Comment 1
2023-05-30 15:29:20 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/14512
EWS
Comment 2
2023-05-30 19:41:41 PDT
Committed
264708@main
(bcf18f7a8a9a): <
https://commits.webkit.org/264708@main
> Reviewed commits have been landed. Closing PR #14512 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug